--- a/static/login.css
+++ b/static/login.css
@@ -18,17 +18,25 @@ li {
     list-style: none;
     display: inline-table;
     text-align: center;
-    width: 100%;
 }
 
 .login {
     position: absolute;
-    left: 50%;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
-form {
-    border: 1px solid white;
-    padding: 10px;
+#signin {
+    padding: 50px;
+    border: 5px solid currentColor;
+    border-radius: 5px;
+    background-color: rgb(46, 46, 46);
+}
+
+#signup {
+    padding: 50px;
+    border: 5px solid currentColor;
+    border-radius: 5px;
+    background-color: rgb(46, 46, 46);
 }
