--- a/templates/login.html
+++ b/templates/login.html
@@ -5,27 +5,23 @@
         <link rel="stylesheet" href="../static/login.css">
     </head>
     <body>
-        <div class="login">
-            <ul>
-                <li>
-                    <form action={{ base_url }}"/auth" method="POST">
-                        <h3>Sign up</h3>
-                        <hr>
-                        <p><input type="text" name="username" maxlength="32" placeholder="Username"/></p>
-                        <p><input type="password" name="password" placeholder="Password"/></p>
-                        <p><input type="submit" value="Sign up"/></p>
-                    </form>
-                </li>
-                <li>
-                    <form action={{ base_url }}"/auth" method="POST">
-                        <h3>Sign in</h3>
-                        <hr>
-                        <p><input type="text" name="username" maxlength="32" placeholder="Username"/></p>
-                        <p><input type="password" name="password" placeholder="Password"/></p>
-                        <p><input type="submit" value="Sign in"/></p>
-                    </form>
-                </li>
-            </ul>
-        </div>
+        <ul class="login">
+            <li>
+                <form id="signup" action="{{ base_url }}auth" method="POST">
+                    <h3>Sign up</h3>
+                    <p><input type="text" name="username" minlength="2" maxlength="32" placeholder="Username"/></p>
+                    <p><input type="password" name="password" placeholder="Password" minlength="8"/></p>
+                    <p><input type="submit" value="Sign up"/></p>
+                </form>
+            </li>
+            <li>
+                <form id="signin" action="{{ base_url }}auth" method="POST">
+                    <h3>Sign in</h3>
+                    <p><input type="text" name="username" minlength="2" maxlength="32" placeholder="Username"/></p>
+                    <p><input type="password" name="password" placeholder="Password" minlength="8"/></p>
+                    <p><input type="submit" value="Sign in"/></p>
+                </form>
+            </li>
+        </ul>
     </body>
 </html>
