--- a/static/login.css
+++ b/static/login.css
@@ -1,3 +1,9 @@
+/*
+ * Copyright (c) 2019. Drainyyy
+ * This project is covered by MIT License
+ * https://opensource.org/licenses/MIT
+ */
+
 @import 'https://fonts.googleapis.com/css?family=Quicksand:300';
 
 html, body {
