--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,9 @@
+<!--
+    Copyright (c) 2019. Drainyyy
+    This project is covered by MIT License
+    https://opensource.org/licenses/MIT TODO copyright on all html files
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
