--- a/templates/login.html
+++ b/templates/login.html
@@ -11,23 +11,17 @@
         <link rel="stylesheet" href="../static/login.css">
     </head>
     <body>
-        <ul class="login">
-            <li>
-                <form id="signup" action="{{ base_url }}auth" method="POST">
-                    <h3>Sign up</h3>
-                    <p><input type="text" name="username" minlength="2" maxlength="32" placeholder="Username"/></p>
-                    <p><input type="password" name="password" placeholder="Password" minlength="8"/></p>
-                    <p><input type="submit" value="Sign up"/></p>
-                </form>
-            </li>
-            <li>
-                <form id="signin" action="{{ base_url }}auth" method="POST">
-                    <h3>Sign in</h3>
-                    <p><input type="text" name="username" minlength="2" maxlength="32" placeholder="Username"/></p>
-                    <p><input type="password" name="password" placeholder="Password" minlength="8"/></p>
-                    <p><input type="submit" value="Sign in"/></p>
-                </form>
-            </li>
-        </ul>
+        <form class="login" id="signup" action="{{ base_url }}auth" method="POST">
+            <h3>Sign up</h3>
+            <p><input type="text" name="username" minlength="3" maxlength="32" placeholder="Username"/></p>
+            <p><input type="password" name="password" placeholder="Password" minlength="8"/></p>
+            <p><input type="submit" value="Sign up"/></p>
+        </form>
+        <form class="login" id="signin" action="{{ base_url }}auth" method="POST">
+            <h3>Sign in</h3>
+            <p><input type="text" name="username" minlength="3" maxlength="32" placeholder="Username"/></p>
+            <p><input type="password" name="password" placeholder="Password" minlength="8"/></p>
+            <p><input type="submit" value="Sign in"/></p>
+        </form>
     </body>
 </html>
